Changed file structure & added ZelauxModCode full supporting